progress in implementation chapter

--- a/content/appendix-C-zkratky.tex
+++ b/content/appendix-C-zkratky.tex
@@ -6,9 +6,12 @@
 \chapter{Seznam použitých zkratek}
 
 \begin{description}[align=left]
-    \item [AST] Abstract syntax tree
+    \item [API] Application Programming Interface
+    \item [AST] Abstract Syntax Tree
+    \item [DOM] Document Object Model
     \item [DSL] Domain-Specific Language
-    \item [OOP] Objektově orientované programování
+    \item [OOP] Objektově Oriented Programming (Objektově orientované programování)
+    \item [REST] Representational State Transfer
     \item [RPC] Remote Procedure Call
     \item [XML] Extensible Markup Language
     \item [XSD] XML Schema Definition
