--- a/content/appendix-D-cd.tex
+++ b/content/appendix-D-cd.tex
@@ -1,6 +1,11 @@
+\usepackage[T1]{fontenc}
+\usepackage[utf8]{inputenc}
+
 %!TEX ROOT=../diploma-thesis.tex
 
 \chapter{Obsah přiloženého CD}
+
+% TODO: přepsat na DP
 
 \begin{verbatim}
     |-- nutfroms-example/       Ukázkový systém využívající knihovnu
