--- a/content/chapter-03-reserse.tex
+++ b/content/chapter-03-reserse.tex
@@ -9,6 +9,8 @@
 
 \section{Modelem řízená architektura}
 
+\section{Architektura klient-server}\label{sec:client-server}
+
 \section{Aspektově orientované programování}
 
 % Co je paradigma
