--- a/content/chapter-04-navrh.tex
+++ b/content/chapter-04-navrh.tex
@@ -17,7 +17,7 @@
 
 \section{Architektura frameworku}
 
-\section{Metamodel}
+\section{Metamodel byznys kontextu}\label{sec:metamodel}
 
 \section{Expression}
 
