--- a/reference.bib
+++ b/reference.bib
@@ -120,3 +120,19 @@
     ISSN = {0272-4847},
     month = {Oct}
 }
+
+@misc{wood2004document,
+    title={Document Object Model (DOM) level 3 core specification},
+    author={Wood, Lauren and Nicol, Gavin and Robie, Jonathan and Champion, Mike and Byrne, Steve},
+    year={2004},
+    publisher={W3C Recommendation}
+}
+
+@inproceedings{kambona2013evaluation,
+    title={An evaluation of reactive programming and promises for structuring collaborative web applications},
+    author={Kambona, Kennedy and Boix, Elisa Gonzalez and De Meuter, Wolfgang},
+    booktitle={Proceedings of the 7th Workshop on Dynamic Languages and Applications},
+    pages={3},
+    year={2013},
+    organization={ACM}
+}
