some progress here and there

--- a/content/appendix-C-zkratky.tex
+++ b/content/appendix-C-zkratky.tex
@@ -6,6 +6,7 @@
 \chapter{Seznam použitých zkratek}
 
 \begin{description}[align=left]
+    \item [ADDA] Aspect-Driven Design Approach
     \item [API] Application Programming Interface
     \item [AST] Abstract Syntax Tree
     \item [DOM] Document Object Model
@@ -13,6 +14,7 @@
     \item [OOP] Objektově Oriented Programming (Objektově orientované programování)
     \item [REST] Representational State Transfer
     \item [RPC] Remote Procedure Call
+    \item [SOA] Service Oriented Architecture
     \item [XML] Extensible Markup Language
     \item [XSD] XML Schema Definition
 \end{description}
