--- a/reference.bib
+++ b/reference.bib
@@ -12,10 +12,13 @@
     publisher = {Springer}
 }
 
-@article{cerny2017disambiguation,
-    title = {Disambiguation and Comparison of SOA, Microservices and Self-Contained Systems},
-    author = {Cerny, Tomas and Donahoo, Michael J and Pechanec, Jiri},
-    year = {2017}
+@inproceedings{cerny2017disambiguation,
+    title={Disambiguation and Comparison of SOA, Microservices and Self-Contained Systems},
+    author={Cerny, Tomas and Donahoo, Michael J and Pechanec, Jiri},
+    booktitle={Proceedings of the International Conference on Research in Adaptive and Convergent Systems},
+    pages={228--235},
+    year={2017},
+    organization={ACM}
 }
 
 @article{rentsch1982object,
@@ -122,17 +125,71 @@
 }
 
 @misc{wood2004document,
-    title={Document Object Model (DOM) level 3 core specification},
-    author={Wood, Lauren and Nicol, Gavin and Robie, Jonathan and Champion, Mike and Byrne, Steve},
-    year={2004},
-    publisher={W3C Recommendation}
+    title = {Document Object Model (DOM) level 3 core specification},
+    author = {Wood, Lauren and Nicol, Gavin and Robie, Jonathan and Champion, Mike and Byrne, Steve},
+    year = {2004},
+    publisher = {W3C Recommendation}
 }
 
 @inproceedings{kambona2013evaluation,
-    title={An evaluation of reactive programming and promises for structuring collaborative web applications},
-    author={Kambona, Kennedy and Boix, Elisa Gonzalez and De Meuter, Wolfgang},
-    booktitle={Proceedings of the 7th Workshop on Dynamic Languages and Applications},
-    pages={3},
-    year={2013},
-    organization={ACM}
+    title = {An evaluation of reactive programming and promises for structuring collaborative web applications},
+    author = {Kambona, Kennedy and Boix, Elisa Gonzalez and De Meuter, Wolfgang},
+    booktitle = {Proceedings of the 7th Workshop on Dynamic Languages and Applications},
+    pages = {3},
+    year = {2013},
+    organization = {ACM}
+}
+
+@book{berson1992client,
+    title = {Client-server architecture},
+    author = {Berson, Alex},
+    year = {1992},
+    publisher = {McGraw-Hill},
+    address = {New York, New York, USA},
+}
+
+@article{cerny2018contextual,
+    title = {Contextual understanding of microservice architecture: current and future directions},
+    author = {Cerny, Tomas and Donahoo, Michael J and Trnka, Michal},
+    journal = {ACM SIGAPP Applied Computing Review},
+    volume = {17},
+    number = {4},
+    pages = {29--45},
+    year = {2018},
+    publisher = {ACM}
+}
+
+@inproceedings{perrey2003service,
+    title = {Service-oriented architecture},
+    author = {Perrey, Randall and Lycett, Mark},
+    booktitle = {Applications and the Internet Workshops, 2003. Proceedings. 2003 Symposium on},
+    pages = {116--119},
+    year = {2003},
+    organization = {IEEE}
+}
+
+@article{fowler2005serviceorientedambiguity,
+    title={ServiceOrientedAmbiguity},
+    author={Fowler, Martin},
+    journal={Martin Fowler--Bliki},
+    volume={1},
+    year={2005}
+}
+
+@article{fielding2000rest,
+    title={REST: architectural styles and the design of network-based software architectures},
+    author={Fielding, Roy Thomas},
+    journal={Doctoral dissertation, University of California},
+    year={2000}
+}
+
+@article{curbera2002unraveling,
+    title={Unraveling the Web services web: an introduction to SOAP, WSDL, and UDDI},
+    author={Curbera, Francisco and Duftler, Matthew and Khalaf, Rania and Nagy, William and Mukhi, Nirmal and Weerawarana, Sanjiva},
+    journal={IEEE Internet computing},
+    volume={6},
+    number={2},
+    pages={86--93},
+    year={2002},
+    publisher={IEEE}
 }
